@@ -1,3 +1,8 @@
+2008-04-08  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-playlist.c (totem_playlist_mrl_to_title):
+	Have a nicer label when loading tracks from a DVD (Closes: #526037)
+
 2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* bindings/python/totem.defs:
